--- a/PetMate/src/pages/Login.css
+++ b/PetMate/src/pages/Login.css
@@ -339,12 +339,12 @@
   }
   
   label:first-child span {
-    border-radius: .475em 0 0 .375em;
-  }
-  
-  label:last-child span {
-    border-radius: 0 .475em .375em 0;
-  }
+    border-radius: 0.5em; /* Certifique-se de que as bordas estão arredondadas */
+}
+
+label:last-child span {
+    border-radius: 0.5em; /* Certifique-se de que as bordas estão arredondadas */
+}
   
 
 
