--- a/PetMate/src/components/RecuperarSenha.css
+++ b/PetMate/src/components/RecuperarSenha.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f9f9f9;
+    background-color: #D4C6B5;
     font-family: 'Nunito', sans-serif;
 }
 
