--- a/PetMate/src/components/ModalLogout.css
+++ b/PetMate/src/components/ModalLogout.css
@@ -12,7 +12,7 @@
     z-index: 1000;
 }
 
-.conteiner-modal-logout {
+.container-modal-logout {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -80,7 +80,7 @@
 }
 
 @media (max-width: 768px) {
-    .conteiner-modal-logout {
+    .container-modal-logout {
         width: 80vw;
         min-height: 40vh;
         padding: 20px;
@@ -108,7 +108,7 @@
 
 
 @media (max-width: 480px) {
-    .conteiner-modal-logout {
+    .container-modal-logout {
         width: 90vw;
         min-height: 10vh;
     }
