--- a/PetMate/src/components/FiltroDenuncias.css
+++ b/PetMate/src/components/FiltroDenuncias.css
@@ -12,7 +12,7 @@
 }
 
 .select-denuncia {
-    border: 1px solid #84644D;
+    /* border: 1px solid #84644D; */
     height: 40px;
     padding: 5px 10px;
     border-radius: 8px;
