--- a/PetMate/src/components/JanelaOng.css
+++ b/PetMate/src/components/JanelaOng.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(2px);
     display: flex;
     justify-content: center;
@@ -19,14 +19,26 @@
     min-width: 60%; 
     max-width: 500px;
     min-height: 70%;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     gap: 20px;
     border-left: #654833 25px solid;
     transition: 0.3s ease;
 }
+.container-janela-ong {
+    animation: fadeIn 0.3s ease-out;
+}
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
 .titulo-ong-modal {
     display: flex;
     justify-content: space-between;
