--- a/PetMate/src/components/JanelaPet.css
+++ b/PetMate/src/components/JanelaPet.css
@@ -2,7 +2,7 @@
     position: fixed;
     inset: 0;
     backdrop-filter: blur(2px);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,14 +12,27 @@
 .container_modal_pet {
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 90vw;
     overflow-y: auto;
     max-height: 90vh;
-    /* border: solid; */
     border-left: #654833 25px solid;
     align-items: center;
     padding: 20px;
+}
+
+.container_modal_pet {
+    animation: fadeIn 0.3s ease-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 .titulo-pet-modal {
