--- a/PetMate/src/components/CardPetPerfil.css
+++ b/PetMate/src/components/CardPetPerfil.css
@@ -1,11 +1,13 @@
 .card-pet-perfil-container {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   gap: 20px;
-  justify-content: center;
+  height: 100%;
   max-height: calc(100vh - 120px);
   overflow-y: auto;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -160,6 +162,46 @@ margin-right: auto;
   font-size: 24px;
   margin-left: 10px;
   cursor: pointer;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+.pagination button {
+  padding: 8px 16px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #654833;
+  background-color: #fff;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.pagination button:hover:not(:disabled) {
+  background-color: #eee;
+}
+
+.pagination button.active {
+  background-color: #654833;
+  color: #fff;
+  font-weight: bold;
+}
+
+.pagination button:disabled {
+  background-color: #fff;
+  color: rgba(8, 8, 8, 0.5);
+}
+
+.pets-perfil {
+  display: flex;
+  gap: 15px;
 }
 
 @keyframes fadeInOut {
