--- a/PetMate/src/components/CardOng.css
+++ b/PetMate/src/components/CardOng.css
@@ -186,3 +186,49 @@
     height: 100px;
   }
 }
+
+
+/* Paginação */
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  gap: 10px;
+  flex-wrap: wrap;
+  padding-top: 50px;
+}
+
+.pagination button {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  padding: 8px 16px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #654833;
+  background-color: #fff;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.pagination button:hover:not(:disabled) {
+  background-color: #eee;
+}
+
+.pagination button.active {
+  background-color: #654833;
+  color: #fff;
+  font-weight: bold;
+}
+
+.pagination button:disabled {
+  background-color: #fff;
+  color: rgba(8, 8, 8, 0.5);
+}
+
+.icon-setaPag {
+  font-size: 20px;
+}
