--- a/PetMate/src/components/ModalDenuncia.css
+++ b/PetMate/src/components/ModalDenuncia.css
@@ -2,7 +2,7 @@
     position: fixed;
     inset: 0;
     backdrop-filter: blur(1px);
-    background-color: rgba(0, 0, 0, 0.2);
+    /* background-color: rgba(0, 0, 0, 0.2); */
     display: flex;
     justify-content: center;
     align-items: center;
