--- a/PetMate/src/components/BarraPesquisa.css
+++ b/PetMate/src/components/BarraPesquisa.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     width: 900px;
     height: 50px;
-    background-color: var(--cor-3);
+    background-color: #f9f9f9;
     border-radius: 25px;
     align-items: center;
     justify-content: space-between;
@@ -28,7 +28,7 @@
     font-size: 16px;
     border: none;
     border-radius: 25px;
-    background-color: var(--cor-3);
+    background-color: #f9f9f9;
     color: black;
     padding-left: 20px;
     font-family: 'Roboto', sans-serif;
