--- a/PetMate/src/components/JanelaPet.css
+++ b/PetMate/src/components/JanelaPet.css
@@ -22,15 +22,50 @@
 }
 
 .container_modal_pet {
-    animation: fadeIn 0.3s ease-out;
+    animation: fadeIn 0.15s ease-out;
 }
-
 @keyframes fadeIn {
-    from {
+    0% {
         opacity: 0;
+        transform: scale(0.8);
+    }
+    10% {
+        opacity: 0.1;
+        transform: scale(0.82);
+    }
+    20% {
+        opacity: 0.2;
+        transform: scale(0.84);
+    }
+    30% {
+        opacity: 0.3;
+        transform: scale(0.86);
+    }
+    40% {
+        opacity: 0.4;
+        transform: scale(0.88);
+    }
+    50% {
+        opacity: 0.5;
         transform: scale(0.9);
     }
-    to {
+    60% {
+        opacity: 0.6;
+        transform: scale(0.92);
+    }
+    70% {
+        opacity: 0.7;
+        transform: scale(0.94);
+    }
+    80% {
+        opacity: 0.8;
+        transform: scale(0.96);
+    }
+    90% {
+        opacity: 0.9;
+        transform: scale(0.98);
+    }
+    100% {
         opacity: 1;
         transform: scale(1);
     }
